# usgs-geomag-algorithms

./: .dockerignore  .gitignore  .gitlab-ci.yml  Calculation_test.py  Dockerfile  Pipfile  README.md  alembic.ini  all_inf_memory_acausal.p  code.json  debugger.py  docker-entrypoint.sh  pyproject.toml  setup.py  short_memory_acausal.p  short_memory_causal.p  teser.json  test_metadata.py
docs/: develop.md  elements.md  install_docker.md  metadata_webservice.md  overview.drawio  overview.md  usage.md
docs/algorithms/: Adjusted_usage.md
docs/residual/: Residual Examples.ipynb  Residual Validation.ipynb  residuals.md  validation_plots.py
etc/adjusted/: BOU201601adj.min  BOU_expected.json  CMO_expected.json  acausal.json  adjbou_state_.json  adjbou_state_HE_.json  all_inf_memory_acausal.json  causal.json  inf_one_interval.json  short_memory_acausal.json  short_memory_causal.json  synthetic.json  synthetic_results.json  synthetic_variables.json  weekly_inf.json  weekly_inf_memory_acausal.json
etc/adjusted/Caldata/: CMO20150522238.xlsm  CMO20150592055.xlsm  CMO20151371803.xlsm  CMO20151572030.xlsm  CMO20151782044.xlsm  CMO20151852045.xlsm  CMO20152210109.xlsm  CMO20152971940.xlsm  CMO20153042027.xlsm  CMO20153182110.xlsm  CMO20153552019.xlsm  DED20200091854.xlsm  DED20200181731.xlsm  DED20200321900.xlsm  DED20200441839.xlsm  DED20200542206.xlsm  DED20200621837.xlsm  DED20200671921.xlsm  DED20200881739.xlsm  DED20202200141.xlsm  DED20202200248.xlsm
etc/residual/: BOU20190702.json  BOU20191001.json  BOU20200101.json  BOU20200422.json
geomagio/: Controller.py  DerivedTimeseriesFactory.py  Metadata.py  TimeseriesFactory.py  TimeseriesUtility.py  __init__.py  geomag_types.py  pydantic_utcdatetime.py
geomagio/adjusted/: AdjustedMatrix.py  Affine.py  AffineType.py  Calculation.py  Generator.py  GeneratorType.py  Metric.py  SpreadsheetSummaryFactory.py  Transform.py  __init__.py
geomagio/adjusted/transform/: LeastSq.py  NoConstraints.py  QRFactorization.py  Rescale3D.py  RotationTranslation3D.py  RotationTranslationXY.py  SVD.py  ShearYZ.py  Transform.py  TranslateOrigins.py  __init__.py  (+3 more)
geomagio/algorithm/: AdjustedAlgorithm.py  FilterAlgorithm.py  SqDistAlgorithm.py
geomagio/apiclient/: MetadataFactory.py  __init__.py  metadata.py
geomagio/edge/: EdgeFactory.py  LegacySNCL.py  MiniSeedFactory.py  MiniSeedInputClient.py  SNCL.py  SNCLFactory.py  __init__.py
geomagio/geomagioapi/: __init__.py  metadata.py
geomagio/iaga2002/: IAGA2002Writer.py  StreamIAGA2002Factory.py
geomagio/imfv122/: StreamIMFV122Factory.py
geomagio/imfv283/: GOESIMFV283Factory.py  StreamIMFV283Factory.py
geomagio/metadata/: Metadata.md  Metadata.py  MetadataFactory.py  MetadataQuery.py  __init__.py  main.py
geomagio/pcdcp/: PCDCPParser.py
geomagio/processing/: __init__.py  adjusted.py  affine.py  affine_matrix.py  derived.py  efield.py  factory.py  filters.py  magproc.py  make_cal.py  matrix.py  monitor.py  observatory.py  obsrio.py
geomagio/residual/: Calculation.py  Diagnostics.py  Measurement.py  Reading.py  SpreadsheetAbsolutesFactory.py  SpreadsheetSummaryFactory.py  WebAbsolutesFactory.py  __init__.py
geomagio/temperature/: TEMPWriter.py
geomagio/vbf/: VBFWriter.py
migrations/: env.py
migrations/versions/: 2280fe551e60_initialize_database.py  4324b87e0b3c_drop_metadata_valid_column.py
scripts/: custom.config.sh  custom.funcs.sh
test/: DerivedTimeseriesFactory_test.py
test/adjusted_test/: adjusted_test.py
test/algorithm_test/: AdjustedAlgorithm_test.py
test/edge_test/: EdgeFactory_test.py  LegacySNCL_test.py  MiniSeedFactory_test.py  MockMiniSeedClient.py  SNCLFactory_test.py  SNCL_test.py  conftest.py  mseed_test_clients.py
test/residual_test/: residual_test.py
(+54 files in other folders)
