[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "geomag-algorithms"
authors = ["HazDev Team <gs-haz_dev_team_group@usgs.gov>"]
description = "USGS Geomag Algorithms Library"
homepage="https://code.usgs.gov/ghsc/geomag/geomag-algorithms"
include = [
  "LICENSE.md"
]
keywords = ["usgs", "geomag", "geomagnetism"]
license = "CC0-1.0"
packages = [
  {include = "geomagio" }
]
repository="https://code.usgs.gov/ghsc/geomag/geomag-algorithms"
version = "1.3.6"


[tool.poetry.dependencies]
python = "^3.7,<3.10"
# core
numpy = "^1.21.1"
obspy = "^1.2.2"
openpyxl = "^3.0.7"
pycurl = {version = "^7.44.1", optional = true}
pydantic = "^1.8.2"
requests = "^2.26.0"
scipy = "^1.7.1"
typer = "^0.3.2"
# webservice
alembic = "^1.6.5"
Authlib = "^0.15.4"
cryptography = "^3.4.7"
databases = {extras = ["mysql", "sqlite"], version = "^0.4.3"}
fastapi = "^0.68.0"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.3.24"
SQLAlchemy-Utc = "^0.12.0"
typing-extensions = "^3.10.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
httpx = "^0.18.2"


[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
safety = "^1.10.3"
mypy = "^0.910"
# type hints
data-science-types = "^0.2.23"
openpyxl-stubs = "^0.1.19"
sqlalchemy-stubs = "^0.4"
types-python-dateutil = "^0.1.6"
types-requests = "^2.25.6"


[tool.poetry.extras]
pycurl = ["pycurl"]


[tool.poetry.scripts]
generate-matrix = "geomagio.processing.affine_matrix:main"
geomag-metadata = "geomagio.metadata.main:main"
geomag-monitor = "geomagio.processing.monitor:main"
geomag-py = "geomagio.Controller:main"
magproc-prepfiles = "geomagio.processing.magproc:main"
make-cal = "geomagio.processing.make_cal:main"
obsrio-filter = "geomagio.processing.obsrio:main"
